# mc-map-reader

./: .gitignore  Cargo.toml  README.md  lcov.sh
.github/workflows/: test.yml
docs/: tarpaulin-report.html
e2e/: server.properties
mc-map-reader/: Cargo.toml  default_config.json
mc-map-reader-lib/: Cargo.toml
mc-map-reader-lib/src/: files.rs  lib.rs  load.rs  nbt.rs
mc-map-reader-lib/src/file_format/anvil/: mod.rs
mc-map-reader-lib/src/file_format/mc_region/: header.rs
mc-map-reader-lib/src/nbt_data/: block_entity.rs  chunk.rs  entity.rs  mod.rs
mc-map-reader-lib/src/nbt_data/load/: block_entity.rs  chunk.rs  mod.rs
mc-map-reader/src/: arguments.rs  compression.rs  config.rs  files.rs  lib.rs  load.rs  main.rs  nbt.rs  quadtree.rs  test_util.rs
mc-map-reader/src/data/: block_entity.rs  chunk.rs  dimension.rs  entity.rs  item.rs  mod.rs
mc-map-reader/src/data/file_format/: anvil.rs  level_dat.rs  mod.rs  player_dat.rs
mc-map-reader/src/data/load/: block_entity.rs  chunk.rs  dimension.rs  entity.rs  item.rs  mod.rs
mc-map-reader/src/data/load/file_format/: level_dat.rs  mod.rs  player_dat.rs
mc-map-reader/src/file_format/anvil/: mod.rs
mc-map-reader/src/file_format/level_dat/: mod.rs
mc-map-reader/src/find_inventories/: config.rs  mod.rs
mc-map-reader/src/nbt_data/load/: chunk.rs  entity.rs
mc-map-reader/src/search_dupe_stashes/: args.rs  config.rs  data.rs  mod.rs
mc-map-reader/src/subcommand/: mod.rs  search_dupe_stashes.rs
mc-map-tools/: Cargo.toml  default-search-dupe-stashes-config.json  default_config.json
mc-map-tools/src/: arguments.rs  config.rs  main.rs  paths.rs  quadtree.rs  tmp_dir.rs
mc-map-tools/src/file/: data_types.rs  mod.rs  region_inventories.rs
mc-map-tools/src/find_inventories/: config.rs  mod.rs
mc-map-tools/src/read_level_dat/: mod.rs
mc-map-tools/src/search_dupe_stashes/: args.rs  config.rs  data.rs  detection_method.rs  mod.rs
src/: block_entity.rs  data.rs  entity.rs  lib.rs  load.rs  main.rs  nbt.rs
src/file_format/: mod.rs
src/file_format/anvil/: load.rs  mod.rs
src/nbt_data/: block_entity.rs  chunk.rs  entity.rs
src/nbt_data/load/: block_entity.rs  chunk.rs  entity.rs  mod.rs
