[package]
name = "mc-map-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"], optional = true }
clap = { version = "4.1.6", features = ["derive"], optional = true }
compress = "0.2.1"
getset = "0.1.2"
jbe = { version = "0.1.0", path = "../../JBE" }
thiserror = "1.0.38"

[features]
build-binary = ["async-std", "clap"]
