[package]
name = "mc-map-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compress = "0.2.1"
getset = "0.1.2"
jbe = { version = "0.1.0", git = "https://github.com/Julian-Alberts/JBE.git" }
libflate = "1.3.0"
log = "0.4.17"
paste = "1.0.12"
rayon = { version = "1.7.0", optional = true }
thiserror = "1.0.38"

[features]
chunk_section = []
block_entity = []
parallel = ["rayon"]
default = ["chunk_section", "block_entity"]
