[package]
name = "mc-map-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mc-map-reader = { path="../mc-map-reader" }
clap = { version = "4.1.6", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
thiserror = "1.0.38"
wildmatch = "2.1.1"
rayon = { version = "1.7.0", optional = true }
dirs = "4.0.0"

[features]
parallel = [ "rayon", "mc-map-reader/parallel" ]
default = [ "parallel" ]
