[package]
name = "mc-map-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mc-map-reader = { path="../mc-map-reader", features = ["region_file", "block_entity", "chunk_section"]}
clap = { version = "4.4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.49"
wildmatch = "2.1.1"
rayon = { version = "1.8.0", optional = true }
dirs = "5.0.1"
log = "0.4.20"
simplelog = "0.12.1"
test-case = "3.2.1"
qutee = { version = "0.2.0" }

[features]
parallel = ["rayon", "mc-map-reader/parallel"]
experimental = ["mc-map-reader/level_dat"]
default = ["parallel"]
